RabbitMQ connection abstract class

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <jackson.version>2.9.7</jackson.version>
         <consul.version>1.2.7</consul.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <rabbitmq.version>5.1.2</rabbitmq.version>
         <junit.version>5.1.0</junit.version>
     </properties>
 
@@ -67,6 +68,12 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <!-- RabbitMQ -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>${rabbitmq.version}</version>
         </dependency>
         <!-- Unit testing -->
         <dependency>
